--- a/src/components/widgets/PalettePicker/template.html
+++ b/src/components/widgets/PalettePicker/template.html
@@ -13,9 +13,8 @@
         v-if="color === value"
         :class="$style.check"
         :size="size"
-      >
-        {{ $vuetify.icons.simput.check }}
-      </v-icon>
+        v-text="`$check`"
+      />
     </div>
   </div>
 </div>
