--- a/src/components/widgets/PalettePicker/template.html
+++ b/src/components/widgets/PalettePicker/template.html
@@ -13,8 +13,9 @@
         v-if="color === value"
         :class="$style.check"
         :size="size"
-        v-text="`$check`"
-      />
+      >
+        {{ $vuetify.icons.simput.check }}
+      </v-icon>
     </div>
   </div>
 </div>
