--- a/src/components/core/FileLoader/template.html
+++ b/src/components/core/FileLoader/template.html
@@ -35,8 +35,9 @@
               <v-icon
                 v-show="file.isRaw"
                 :class="$style.icon"
-                v-text="`$error`"
-              />
+              >
+                {{ $vuetify.icons.simput.error }}
+              </v-icon>
             </div>
             <template v-if="file.isRaw">
               <raw-file-reader
@@ -62,8 +63,8 @@
           >
             <div slot="header" class="body-2">
               {{ file.name }}
-              <v-icon v-show="!!file.error" color="red" v-text="`$error`" />
-              <v-icon v-show="!file.error" color="green" v-text="`$ok`" />
+              <v-icon v-show="!!file.error" color="red">{{ $vuetify.icons.simput.error }}</v-icon>
+              <v-icon v-show="!file.error" color="green">{{ $vuetify.icons.simput.ok }}</v-icon>
             </div>
             <v-card v-if="file.error">
               <v-card-text>
