--- a/src/components/properties/CellProperty/template.html
+++ b/src/components/properties/CellProperty/template.html
@@ -9,15 +9,26 @@
       <v-label>{{ prop.ui.label }}</v-label>
     </v-flex>
     <v-spacer />
-    <v-flex v-if="layout === '-1'" key="if-can-add" xs1>
-      <v-btn icon small @click="addValue">
-        <v-icon small v-text="`$add`" />
+    <v-flex
+      v-if="layout === '-1'"
+      key="if-can-add"
+      xs1
+    >
+      <v-btn
+        icon
+        small
+        @click="addValue"
+      >
+        <v-icon small>{{ $vuetify.icons.simput.add }}</v-icon>
       </v-btn>
     </v-flex>
   </v-layout>
   <v-layout wrap align-center>
     <template v-for="i in size">
-      <v-flex :key="`${i}-input`" v-bind="getCellAttrs(i-1)">
+      <v-flex
+        :key="`${i}-input`"
+        v-bind="getCellAttrs(i-1)"
+      >
         <input-cell
           :index="i-1"
           :label="size > 1 || layout === '-1' ? getCellLabel(i-1) : prop.ui.label"
@@ -29,9 +40,17 @@
           v-on:blurred="editing = help = false"
         />
       </v-flex>
-      <v-flex v-if="layout === '-1'" :key="`${i}-delete`" xs1>
-        <v-btn icon small @click="onChange(null, i-1)">
-          <v-icon small v-text="`$delete`" />
+      <v-flex
+        v-if="layout === '-1'"
+        :key="`${i}-delete`"
+        xs1
+      >
+        <v-btn
+          icon
+          small
+          @click="onChange(null, i-1)"
+        >
+          <v-icon small>{{ $vuetify.icons.simput.delete }}</v-icon>
         </v-btn>
       </v-flex>
     </template>
