--- a/src/components/properties/MapProperty/template.html
+++ b/src/components/properties/MapProperty/template.html
@@ -7,7 +7,7 @@
     <v-flex xs5 class="text-xs-center">Value</v-flex>
     <v-flex xs2>
       <v-btn icon small @click="addEntry">
-        <v-icon small v-text="`$add`" />
+        <v-icon small>{{ $vuetify.icons.simput.add }}</v-icon>
       </v-btn>
     </v-flex>
   </v-layout>
@@ -43,8 +43,12 @@
       />
     </v-flex>
     <v-flex xs2>
-      <v-btn icon small @click="removeEntry(i)">
-        <v-icon small v-text="`$delete`" />
+      <v-btn
+        icon
+        small
+        @click="removeEntry(i)"
+      >
+        <v-icon small>{{ $vuetify.icons.simput.delete }}</v-icon>
       </v-btn>
     </v-flex>
   </v-layout>
